--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Some CSS stuff</h1>
-    <button class="toggle">Toggle Theme</button>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
